<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.insper.hackathon2.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolha_o_fator_ser_monitorado"
        android:id="@+id/text_title"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/monitoramento_cardiaco"
        android:id="@+id/btn_heartbeat"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/monitoramento_temperatura"
        android:id="@+id/btn_temp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/monitoramento_movimenta_o"
        android:id="@+id/btn_move"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/monitoramento_oxigena_o"
        android:id="@+id/btn_oxigen"/>



</LinearLayout>
